<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutViewDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editViewTitleInsert"
            style="@style/textViewTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textNomeCompleto"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/editNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editViewNome"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Big"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNomeCompleto"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewCpf"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNomeCompleto"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textCpf"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/editViewCpf"
            android:inputType="number"
            android:maxLength="@integer/maxLines_Big"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:hint="@string/textData"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCpf"/>

        <TextView
            android:id="@+id/viewErroNascimentoInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@+id/textDataNascimento"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textCep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewErroNascimentoInsert"
            style="@style/StyleTextView"/>

        <EditText
            android:id="@+id/editCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editViewCep"
            android:inputType="number"
            android:imeOptions="actionSearch"
            android:maxLength="@integer/maxLines_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCep"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textLogradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewLogradouro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCep"/>

        <EditText
            android:id="@+id/editLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textLogradouro"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Big"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewBairro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLogradouro"/>

        <EditText
            android:id="@+id/editBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textBairro"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Big"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewNumero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editBairro"/>

        <EditText
            android:id="@+id/editNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNumero"
            android:inputType="number"
            android:maxLength="@integer/maxLines_Small_2"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewComplemento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNumero"/>

        <EditText
            android:id="@+id/editComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textComplemento"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/textViewComplemento"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Small"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewEstado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editComplemento"/>

        <EditText
            android:id="@+id/editEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textEstado"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Small"
            style="@style/StyleEditTextForm" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleButtonInsert"
            app:layout_constraintTop_toBottomOf="@id/editEstado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/StyleButton"
            android:background="@drawable/style_button"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>